# androphage

./: .gitignore  .gitmodules  pyproject.toml  readme.md  unikyria.json
build123d/: androphage.py
build123d/components/: battery.py
cad/: androphage.20251210-102535.FCBak  androphage.20251210-200041.FCBak  androphage.20251213-144155.FCBak  androphage.FCStd  androphage.json  androphage.py  androphage.scad  androphage.yaml  androphage_assembly.scad  androphage_common.py  androphage_ergogen.json  androphage_globals.scad  androphage_objects.scad  assembly.scad  color.scad  common.py  compile.sh  derives.scad  ergogen.py  ergogen.scad  ergogen.yaml  ergogen_to_scad.py  globals.scad  import_bosl.scad  key_locations.py  key_placement.py  keycaps.csv  layout.py  objects.scad  parameters.py  parameters.scad
cad/components/: battery.py  battery.scad  bottom_plate.scad  btu.py  btu.scad  (+28 more)
cad_py/: androphage.py  androphage_common.py  battery.py  pyproject.toml
cadquery/: androphage.py
doc/: bom.csv  bom.md  csv2md.py
kle/: androphage.json
openscad/: androphage.yaml  ergogen.py  ergogen_to_scad.py
pcb/: #auto_saved_files#  Left.kicad_sch  Left_Switches.kicad_sch  Right.kicad_sch  Xiao_VIK_Hat.kicad_sch  _autosave-Left.kicad_sch  _autosave-control.kicad_sch  _autosave-left_switches.kicad_sch  androphage.kicad_pcb  androphage.kicad_prl  androphage.kicad_pro  androphage.kicad_sch  control.kicad_sch  fp-info-cache  fp-lib-table  right_switches.kicad_sch  sym-lib-table  unikyria.kicad_pcb  unikyria.kicad_prl  unikyria.kicad_pro  unikyria.kicad_sch  ~unikyria.kicad_pcb.lck
(+61 files in other folders)
