[project]
name = "androphage"
version = "0.0.1"
authors = [
  { name="Joshua Lucas", email="joshdlucas@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "LicenseRef-CERN-OHL-v2-S"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Silcantar/androphage"
Issues = "https://github.com/Silcantar/androphage/issues"

[tool.setuptools.packages.find]
where = ["cad"]
namespaces = false